# Granny-3D-SDK

./: README.md
anim_studio/: anim_studio.sln  anim_studio.vcproj  grid_disk.h  images_disk.h  luasources_disk.h  luautils.cpp  luautils.h  main.lua  simple_job.cpp  simple_job.h  source_monitor.cpp  source_monitor.h  statement.cpp  statement.h  statement_editstate.cpp  statement_editstate.h  statement_fileops.cpp  statement_fileops.h  statement_undostack.cpp  statement_undostack.h  statement_xinput.cpp  statement_xinput.h  stb_image.c  ui_area.cpp  ui_area.h  ui_bitmap.cpp  ui_bitmap.h  ui_blendgraph_drawing.cpp  ui_blendgraph_drawing.h  ui_blendnode_edit.cpp  ui_blendnode_edit.h  ui_character_render.cpp  ui_character_render.h  ui_controls.cpp  ui_controls.h  ui_core.cpp  ui_core.h  ui_drawing.cpp  ui_drawing.h  ui_editfield.cpp  (+13 more)
doc/: gstate.chm  studio_quickstart.html
gstate/: gstate.h  gstate.vcproj  gstate.vcxproj  gstate.vcxproj.filters  gstate_additive_blend.cpp  gstate_additive_blend.h  gstate_aimat_ik.cpp  gstate_aimat_ik.h  gstate_anim_source.cpp  gstate_anim_source.h  gstate_anim_utils.cpp  gstate_anim_utils.h  gstate_base.cpp  gstate_base.h  gstate_blend.cpp  gstate_blend.h  gstate_blend_graph.cpp  gstate_blend_graph.h  gstate_character_info.cpp  gstate_character_info.h  gstate_character_instance.cpp  gstate_character_instance.h  gstate_character_internal.h  gstate_conditional.cpp  gstate_conditional.h  gstate_constant_velocity.cpp  gstate_constant_velocity.h  gstate_container.cpp  gstate_container.h  gstate_cpp_settings.h  gstate_event_mixer.cpp  gstate_event_mixer.h  gstate_event_renamer.cpp  gstate_event_renamer.h  gstate_event_source.cpp  gstate_event_source.h  gstate_event_triggered.cpp  gstate_event_triggered.h  gstate_exp_interface.h  gstate_header_postfix.h  (+61 more)
include/: granny2_spu_samplemodel.h
preprocessor/: add_texture.cpp  add_texture.h  bind_meshes.cpp  bones_per_mesh.cpp  clean_materials.cpp  combine_elements.cpp  create_file_db.cpp  example_set_vertformat.cpp  generate_mipmaps.cpp  generate_tangents.cpp  generate_tangents.h  granny_file_database.cpp  granny_file_database.h  kill_uncommon_data.cpp  lod_calc.cpp  make_spu_animation_info.cpp  make_string_database.cpp  make_string_database.h  mesh_indices_16bit.cpp  platform_convert.cpp  platform_convert.h  preprocessor.cpp  preprocessor.h  preprocessor.sln  preprocessor.vcproj  preprocessor.vcxproj  preprocessor.vcxproj.filters  preprocessor_mod_support.h  rebase_texture_files.cpp  remove_elements.cpp  remove_namespace.cpp  remove_text_tracks.cpp  remove_unchanging_tracks.cpp  remove_vector_tracks.cpp  rename_element.cpp  resection_file.cpp  run_batch.cpp  set_compression.cpp  set_file_alignment.cpp  set_internal_alignment.cpp  (+13 more)
source/: CMakeLists.txt  arithbit.c  arithbit.h  binktc.c  binktc.h  contain.inl  encode.c  encode.h  granny_accelerated_deformers.h  granny_aggr_alloc.cpp  granny_aggr_alloc.h  granny_animation.cpp  granny_animation.h  granny_animation_binding.cpp  granny_animation_binding.h  granny_art_tool_info.cpp  granny_art_tool_info.h  granny_assert.cpp  granny_assert.h  granny_back_compat.cpp  granny_back_compat.h  granny_basis_conversion.cpp  granny_basis_conversion.h  granny_binary_search.cpp  granny_binary_search.h  granny_bink.cpp  granny_bink.h  granny_bink0_compression.cpp  granny_bink0_compression.h  granny_bink1_compression.cpp  granny_bink1_compression.h  granny_bone_operations.cpp  granny_bone_operations.h  granny_bspline.cpp  granny_bspline.h  granny_bspline_buffers.cpp  granny_bspline_buffers.h  granny_bspline_inlines.h  granny_bspline_solver.cpp  granny_bspline_solver.h  (+244 more)
source/ps3/: Cell_granny_bone_operations.cpp  granny_spu_curve_sample_ppu.cpp  granny_spu_curve_sample_ppu.h  ps3_granny_assert.cpp  ps3_granny_file_operations.cpp  ps3_granny_file_reader.cpp  ps3_granny_file_writer.cpp  ps3_granny_math.cpp  ps3_granny_memory.cpp  ps3_granny_std.cpp  ps3_granny_std.h  ps3_granny_system_clock.cpp  ps3_granny_threads.cpp  ps3_rrAtomics.cpp
source/ps3/spurs/: granny_spu_commands_spurs.cpp  spuimageutils.c  spuimageutils.h
source/wii/: wii_granny_accelerated_deformers.cpp  wii_granny_assert.cpp  wii_granny_bone_operations.cpp  wii_granny_file_operations.cpp  wii_granny_file_reader.cpp  wii_granny_file_writer.cpp  wii_granny_matrix_operations.cpp  wii_granny_memory.cpp  wii_granny_revolution.cpp  wii_granny_revolution.h  wii_granny_system_clock.cpp  wii_granny_threads.cpp  wii_rrAtomics.cpp  winxx_granny_windows.h
source/wiiu/: ansi_granny_accelerated_deformers.cpp  ansi_granny_assert.cpp  ansi_granny_file_operations.cpp  ansi_granny_file_writer.cpp  ansi_granny_memory.cpp  ansi_granny_std.cpp  ansi_granny_std.h  wiiu_granny_file_reader.cpp  wiiu_granny_system_clock.cpp  wiiu_granny_threads.cpp  wiiu_rrAtomics.cpp
source/winxx/: winxx_granny_assert.cpp  winxx_granny_dll.cpp  winxx_granny_dll.h  winxx_granny_file_operations.cpp  winxx_granny_file_reader.cpp  winxx_granny_file_writer.cpp  winxx_granny_memory.cpp  winxx_granny_startup.cpp  winxx_granny_system_clock.cpp  winxx_granny_threads.cpp  winxx_granny_windows.cpp
source/winxx/win32/: granny.cpp  x86_granny_accelerated_deformer_wrapper.inl  x86_granny_accelerated_deformers.cpp  x86_granny_accelerated_deformers_custom.inl  x86_granny_accelerated_deformers_generated.inl  x86_granny_asm_helper.h  x86_granny_bone_operations.cpp  x86_granny_cpu_queries.cpp  x86_granny_cpu_queries.h  x86_granny_matrix_operations.cpp  x86_granny_matrix_operations_ops.inl
source/winxx/win64/: ansi_granny_bone_operations.cpp  ansi_granny_matrix_operations.cpp  win64_rrAtomics.cpp  win64_rrAtomics_x64.asm
source/xenon/: xenon_granny_accelerated_deformers.cpp  xenon_granny_assert.cpp  xenon_granny_bone_operations.cpp  xenon_granny_file_operations.cpp  xenon_granny_file_reader.cpp  xenon_granny_file_writer.cpp  xenon_granny_matrix_operations.cpp  xenon_granny_matrix_operations.h  xenon_granny_memory.cpp  xenon_granny_system_clock.cpp  xenon_granny_threads.cpp  xenon_granny_xtl.cpp  xenon_granny_xtl.h  xenon_rrAtomics.cpp
tutorials/: Makefile  (+2 more)
(+460 files in other folders)
